Update v1 for BTAv7.3_01

--- a/fr_FR/biomes.lang
+++ b/fr_FR/biomes.lang
@@ -17,7 +17,7 @@ biome.nether=Nether
 biome.paradise=Paradise
 biome.birch_forest=Boulaie
 biome.retro=Retro
-biome.hell=Hell
+biome.hell=Enfer
 biome.swampland.muddy=Marécage boueux
 biome.outback.grassy=Cambrousse herbeuse
 biome.caatinga=Caatinga
