--- a/fr_FR/gui.lang
+++ b/fr_FR/gui.lang
@@ -7,6 +7,14 @@ gui.achievements.button.done=Terminé
 gui.achievements.label.title=Succès
 gui.achievements.label.taken=Obtenu !
 gui.achievements.label.requires=Nécessite '%1$s'
+gui.achievements.label.completion=%1$s Complete!
+
+gui.achievements.page.vanilla.name=Vanilla
+gui.achievements.page.vanilla.desc=Succès de Better than Adventure !
+gui.achievements.page.overworld.name=Overworld
+gui.achievements.page.overworld.desc=Succès de la dimension de départ !
+gui.achievements.page.nether.name=Nether
+gui.achievements.page.nether.desc=Succès d'enfer !
 
 gui.add_server.label.title=Ajouter un serveur
 gui.add_server.button.save=Sauvegarder
@@ -25,6 +33,21 @@ gui.bad_java_arch.label.body.4=Considérez télécharger la version 64-bit, comm
 gui.bad_java_arch.button.download=Télécharger
 gui.bad_java_arch.button.continue=Continue
 
+gui.no_jce.label.title=Java Cryptography Extension (JCE) absente !
+gui.no_jce.label.body.1=Il semble que vous exécutiez Better than Adventure ! sans JCE.
+gui.no_jce.label.body.2=Cela interrompra certaines fonctions liées au réseau, comme le téléchargement
+gui.no_jce.label.body.3=le son et le chat multijoueurs !
+gui.no_jce.label.body.4=Veuillez envisager de télécharger un JRE plus récent
+gui.no_jce.label.body.5=avec l'extension incluse, comme Eclipse Temurin.
+gui.no_jce.label.body.intel.disclaimer.1=En raison de problèmes de compatibilité matérielle avec le matériel Intel Graphics
+gui.no_jce.label.body.intel.disclaimer.2=vous devrez probablement corriger votre installation Java existante
+gui.no_jce.label.body.intel.disclaimer.3=pour y inclure l'extension JCE.
+gui.no_jce.button.download.recommended=Téléchargement de Java (recommandé !)
+gui.no_jce.button.download=Téléchargement Java
+gui.no_jce.button.upgrade=Patch JCE
+gui.no_jce.button.upgrade.recommended=Patch JCE (Recommandé !)
+gui.no_jce.button.continue=Continuer
+
 gui.no_minecraft.label.title=Minecraft Beta 1.7.3 manquant !
 gui.no_minecraft.label.body.1=Il semble que vous exécutiez Better than Adventure! sans Minecraft Beta 1.7.3.
 gui.no_minecraft.label.body.2=Better than Adventure! doit être installé avec une copie officielle de
@@ -34,6 +57,7 @@ gui.no_minecraft.label.body.5=Veuillez consulter le guide d'installation ci-dess
 gui.no_minecraft.button.guide=Guide d'installation
 gui.no_minecraft.button.quit=Quitter le jeu
 
+
 gui.conflict_warning.label.title=Level safe conflict
 gui.conflict_warning.label.body.1=Minecraft detected a conflict in the level save data.
 gui.conflict_warning.label.body.2=This could be caused by two copies of the game
@@ -41,7 +65,7 @@ gui.conflict_warning.label.body.3=accessing the same level.
 gui.conflict_warning.label.body.4=To prevent level corruption, the current game has quit.
 gui.conflict_warning.button.back=Retour au menu principal
 
-gui.connect_failed.label.title=Echec de connexion au serveur
+gui.connect_failed.label.title=Échec de connexion au serveur
 gui.connect_failed.button.back=Retour au menu principal
 
 gui.connect_to_ip.button.connect=Connexion
@@ -54,8 +78,6 @@ gui.connecting.label.connecting=Connexion au serveur...
 gui.connecting.label.logging_in=Authentification...
 
 gui.controller_setup.button.back=Retour
-gui.controller_setup.label.help.1=Si aucune manette n'est détecté, veillez à
-gui.controller_setup.label.help.2=lancer le jeu avec la manette branchée.
 gui.controller_setup.label.no_controller_selected=Aucune manette n'a été sélectionné !
 
 gui.crafting.label.crafting=Établi
@@ -72,7 +94,7 @@ gui.create_world.button.cheats.on=Oui
 gui.create_world.button.cheats.off=Non
 gui.create_world.button.world_type=Type de monde : %s
 gui.create_world.label.new_world=Nouveau monde
-gui.create_world.label.select_world_type=Sélectionne un type de monde
+gui.create_world.label.select_world_type=Sélectionner le type de monde
 
 gui.create_world.label.title=Créer un nouveau monde
 gui.create_world.button.cancel=Annuler
@@ -86,6 +108,9 @@ gui.create_world.pages.game_rules.title=Règles du jeu
 
 gui.dispenser.label.dispenser=Distributeur
 gui.dispenser.label.inventory=Inventaire
+
+gui.activator.label.activator=Activateur
+gui.activator.label.inventory=Inventaire
 
 gui.downloading_terrain.label.title=Téléchargement du terrain
 
@@ -146,7 +171,8 @@ gui.main_menu.label.splash.halloween=Bon Halloween !
 gui.main_menu.label.splash.new_year=Bonne année bonne santé !
 gui.main_menu.label.disclaimer.1=Copyright Mojang Studios. N'est pas un produit officiel.
 gui.main_menu.label.disclaimer.2=N'est pas approuvé ou associé à Microsoft ou Mojang Studio.
-gui.main_menu.label.downloading_resources=Téléchargement des ressources : %s / %s
+gui.main_menu.label.downloading_resources.1=Téléchargement des ressources : %s / %s
+gui.main_menu.label.downloading_resources.2=Les sons peuvent ne pas être joués pendant ce processus !
 gui.main_menu.button.singleplayer=Solo
 gui.main_menu.button.multiplayer=Multijoueur
 gui.main_menu.button.multiplayer.disabled=Multijoueur (pas encore prêt!)
@@ -154,15 +180,16 @@ gui.main_menu.button.texture_packs=Packs de textures
 gui.main_menu.button.options=Options...
 gui.main_menu.button.quit_game=Quitter le jeu
 gui.main_menu.button.discord=Discord
-gui.main_menu.button.minecraft_forum=Minecraft Forum
 gui.main_menu.button.youtube=YouTube
+gui.main_menu.button.website=Site web
+gui.main_menu.button.credits=Crédits
 
-gui.out_of_memory.label.title=Out of memory!
-gui.out_of_memory.label.body.1=Minecraft has run out of memory.
-gui.out_of_memory.label.body.2=This could be caused by a bug in the game or by the
-gui.out_of_memory.label.body.3=Java Virtual Machine not being allocated enough
-gui.out_of_memory.label.body.4=memory.
-gui.out_of_memory.label.body.5=To prevent level corruption, the current game has quit.
+gui.out_of_memory.label.title=Plus de mémoire !
+gui.out_of_memory.label.body.1=Minecraft est à court de mémoire.
+gui.out_of_memory.label.body.2=Cela peut être dû à un bogue dans le jeu ou à un
+gui.out_of_memory.label.body.3=manque de mémoire allouée à la machine virtuelle
+gui.out_of_memory.label.body.4=Java.
+gui.out_of_memory.label.body.5=Pour éviter la corruption des niveaux, la partie en cours doit être interrompue.
 gui.out_of_memory.label.body.6=Redémarrez votre jeu.
 
 gui.options.title=Options
@@ -182,6 +209,9 @@ gui.options.page.audio.title=Musiques et sons
 gui.options.page.audio.category.audio=Audio
 gui.options.page.audio.category.debug=Débogage
 
+gui.options.page.accessibility.title=Accessibilité
+gui.options.page.accessibility.category.accessibility=Accessibilité
+
 gui.options.page.video.title=Graphiques
 gui.options.page.video.category.graphics=Graphismes
 gui.options.page.video.category.performance=Performance
@@ -190,7 +220,7 @@ gui.options.page.video.category.visuals=Visuels
 
 gui.options.page.controls.title=Contrôles
 gui.options.page.controls.button.controller_setup=Configuration de la manette...
-gui.options.page.controls.button.key.unbound=Unbound
+gui.options.page.controls.button.key.unbound=Délier
 gui.options.page.controls.category.mouse=Souris
 gui.options.page.controls.category.keyboard=Clavier
 gui.options.page.controls.category.controller=Manette
@@ -223,10 +253,33 @@ gui.options.page.debug.category.test=Tests
 gui.options.page.debug.button.open.model_viewer=Ouvrir le visualiseur de modèle
 gui.options.page.debug.button.open.biome_finder=Ouvrir l'outil de recherche de biomes
 gui.options.page.debug.button.open.datadumper=Run Data Dumper
+gui.options.page.debug.button.open.sound_test=Open Sound Test
+gui.options.page.debug.button.open.texture_viewer=Open Texture Viewer
+gui.options.page.debug.button.open.achievements=Open Achievements
+gui.options.page.debug.button.wipestats=Delete Stats
+gui.options.page.debug.button.unlockedall=Unlock all stats
+gui.options.page.debug.button.cheat=Activer les triches
 gui.options.page.debug.button.crash.soft=Crash Soft
 gui.options.page.debug.button.crash.hard=Crash Hard
+gui.options.page.debug.button.music.skip=Force Ambient Music
+gui.options.page.debug.button.garbage_collect=Run Garbage Collector
 
 gui.options.page.search.title=Rechercher
+
+gui.sound_test.label.title=Test de son
+gui.sound_test.label.repo=Dépôt de sons : %s
+gui.sound_test.label.id=ID : %s
+gui.sound_test.label.subtitle=Sous-titre : %s | %s
+gui.sound_test.label.url=URL : %s
+gui.sound_test.label.select_repo=Sélectionnez Repo :
+gui.sound_test.label.select_entry=Sélectionnez l'entrée :
+gui.sound_test.button.done=Terminé
+gui.sound_test.button.play=Jouer
+gui.sound_test.button.play_stream=Jouer le flux
+gui.sound_test.button.reload=Recharger
+gui.sound_test.button.stop=Arrêter
+
+gui.texture_viewer.label.title=Visualisateur de textures
 
 gui.photo_mode.label.mouse_hint=Cliquez et faites glisser pour déplacer et faire pivoter.
 gui.photo_mode.button.take_screenshot=Capturez
@@ -267,11 +320,11 @@ gui.select_server.button.show_ip.on=Oui
 gui.select_server.button.show_ip.off=Non
 
 gui.select_world.label.title=Mondes
-gui.select_world.label.world=World %s
+gui.select_world.label.world=Monde %s
 gui.select_world.label.must_be_converted=Dois être convertie !
-gui.select_world.label.dimension_corrupted=Error Dimension Corrupted!
-gui.select_world.label.outdated=Mauvaise version - ne peux pas être convertie (encore!)
-gui.select_world.label.delete_title=Delete World
+gui.select_world.label.dimension_corrupted=Erreur dimension corrompue !
+gui.select_world.label.outdated=Mauvaise version - ne peux pas (encore !) être convertie
+gui.select_world.label.delete_title=Supprimer le monde
 gui.select_world.label.delete_confirm.1=Es-tu sûr de vouloir supprimer ce monde ?
 gui.select_world.label.delete_confirm.2='%s' sera perdu pour toujours ! (Un long moment!)
 gui.select_world.label.rename_title=Renommer le monde
@@ -309,7 +362,6 @@ gui.model_viewer.slider.meta=Méta : %d
 gui.model_viewer.button.tickprogress=Run Tick : %s
 gui.model_viewer.button.rotate=Rotate Labels : %s
 gui.model_viewer.button.reload_textures=Recharger les textures
-
 gui.model_viewer.button.category=Catégorie
 
 model.category.entity.info=Entité : %s
@@ -333,6 +385,7 @@ model.category.entity.boat.button.flag=Flag : %s
 model.category.entity.boat.button.wind=Wind : %s degrees
 model.category.entity.slime.slider.size=Slime : %s
 model.category.entity.minecart.button.cycle=Cycle Minecart
+model.category.entity.minecart.slider.color=Couleur : %s
 
 model.category.block.name=Block
 model.category.block.info=Block: %s
@@ -344,3 +397,8 @@ model.category.particle.info=Particule : %s
 model.category.particle.radius.slider=Rayon : %s
 model.category.particle.note.slider=Note : %s
 model.category.particle.block.side=Side : %s
+
+gui.credits.button.done=Terminé
+gui.credits.label.title=Crédits
+
+gui.tooltip.prompt.description=%s : Afficher plus...
