--- a/fr_FR/options.lang
+++ b/fr_FR/options.lang
@@ -9,7 +9,7 @@ options.sound.music=Volume de la musique
 options.sound.master=Volume principale
 options.sound.world=Volume du monde
 options.sound.entity=Volume des entitées
-options.sound.cave=Volume des son de grotte
+options.sound.cave=Volume des sons de grotte
 options.sound.gui=Volume du menu
 options.sound.weather=Volume de la météo
 options.invertYMouse=Inverser la souris
@@ -32,6 +32,7 @@ options.enableVsync=Activer la synchro. verticale
 options.customFpsLimit.unlimited=Illimité
 options.customFpsLimit=Limite de FPS
 options.difficulty=Difficulté
+options.difficulty.locked=Verrouillé
 options.difficulty.peaceful=Pacifique
 options.difficulty.easy=Facile
 options.difficulty.normal=Normal
@@ -69,6 +70,7 @@ options.animations.custom=Customisé
 options.animations.procedural=Procédurale
 options.animations.off=Désactivé
 options.autoHit=Coup automatique
+options.easyBridge=Pont facile
 options.controller=Manette...
 options.controllerSensitivity=Sensibilité
 options.controllerMenuSensitivity=Sensibilité des menus
@@ -156,14 +158,24 @@ options.lightmapStyle.disabled=Désactivée
 options.customLightmap=Texture de lumière personnalisée
 options.old=Vieux menu
 options.lockCamera=Vérouiller la caméra
-options.disableJInput=Désactiver JInput
-options.disableCrashHandler=Disable Crash Handler
-options.disableResize=Disable Resize
-options.startInFullscreen=Start In Fullscreen
-options.disableShaders=Disable Shaders
-options.loadAllSounds=Load All Sounds
+options.disableCrashHandler=Désactiver le gestionnaire de crash
+options.disableResize=Désactiver le redimensionnement
+options.startInFullscreen=Démarrer en plein écran
+options.disableShaders=Désactiver les shaders
+options.loadAllSounds=Charger tous les sons
 options.allowSoundOverrides=Allow Sound Overrides
 options.downloadSoundfiles=Download Sound Files
+options.subtitles=Sous-titres
+options.chatVisibility=Visibilité du chat
+options.chatVisibility.show_all=Toujours
+options.chatVisibility.show_when_chatting=Chatting
+options.chatVisibility.never_show=Jamais
+options.enableHolidayTextures=Activer les textures de fêtes
+options.enableDevResourceLoading=Developer Resource Loading
+options.enableMultiDrawRendering=Enable Multi-Draw Renderer (experimental!)
+
+options.fov.modification=Modification contextuelle du champ de vision
+options.screen.motion.effects=Effets de mouvement d'écran
 
 options.tooltipStyle.default=Défaut
 options.tooltipStyle.modern=Moderne
@@ -227,10 +239,14 @@ key.switchPerspective=Changer la perspective
 key.screenshot=Prendre une capture d'écran
 key.cinematicCamera=Basculer en caméra cinématique
 key.autoWalk=Marche Auto
+key.easyBridge=Basculer le pont facile
 key.sprint=Courir (si activé)
 key.toggleDebug=Afficher le Debug
 key.toggleOverlay=Basculer l'Overlay
 key.sortInventory=Trier l'inventaire
+key.openAchievements=Ouvrir les succès
+key.openStatistics=Ouvrir les statistiques
+key.description=Afficher la description des objets
 key.disabled=Désactivé
 key.debug.textureAtlas=Afficher l'atlas de textures
 key.debug.reload=Recharger les textures
