--- a/fr_FR/tile.lang
+++ b/fr_FR/tile.lang
@@ -44,6 +44,8 @@ tile.basalt.carved.name=Basalte taillé
 tile.basalt.carved.desc=Basalte poli avec des lignes taillées au milieu.
 tile.permafrost.carved.name=Pergélisol taillé
 tile.permafrost.carved.desc=Pergélisol poli avec des lignes taillées au milieu.
+tile.netherrack.carved.name=Netherrack taillée
+tile.netherrack.carved.desc=Netherrack polie avec des lignes taillées au milieu.
 
 tile.planks.oak.name=Planches
 tile.planks.oak.desc=Des planches de bois d'arbres transformés.
@@ -230,6 +232,8 @@ tile.brick.permafrost.name=Briques de pergélisol
 tile.brick.permafrost.desc=Des briques de pergélisol empilées.
 tile.brick.iron.name=Briques de fer
 tile.brick.iron.desc=Des briques de fer empilées.
+tile.brick.steel.name=Briques d'acier
+tile.brick.steel.desc=Des briques d'acier empilées.
 
 tile.slab.planks.oak.name=Dalle en bois
 tile.slab.planks.oak.desc=Une dalle en planche de bois.
@@ -312,6 +316,14 @@ tile.slab.brick.sandstone.name=Dalle en briques de grès
 tile.slab.brick.sandstone.desc=Une dalle en briques de grès.
 tile.slab.brick.permafrost.name=Dalle en briques de pergélisol
 tile.slab.brick.permafrost.desc=Une dalle en briques de pergélisol.
+tile.slab.brick.iron.name=Dalle en briques de fer
+tile.slab.brick.iron.desc=Une dalle en briques de fer.
+tile.slab.brick.gold.name=Dalle en briques d'or
+tile.slab.brick.gold.desc=Une dalle en briques d'or.
+tile.slab.brick.steel.name=Dalle en briques d'acier
+tile.slab.brick.steel.desc=Une dalle en briques d'acier.
+tile.slab.brick.lapis.name=Dalle en briques de lapis
+tile.slab.brick.lapis.desc=Une dalle en briques de lapis.
 
 tile.stairs.planks.oak.name=Escalier en bois 
 tile.stairs.planks.oak.desc=Bloc de bois utilisé pour de rapides mouvements verticaux.
@@ -347,6 +359,14 @@ tile.stairs.brick.sandstone.name=Escalier en briques de grès
 tile.stairs.brick.sandstone.desc=Bloc de briques de grès utilisé pour de rapides mouvements verticaux.
 tile.stairs.brick.permafrost.name=Escalier en briques de pergélisol
 tile.stairs.brick.permafrost.desc=Bloc de briques de pergélisol utilisé pour de rapides mouvements verticaux.
+tile.stairs.brick.iron.name=Escalier en briques de fer
+tile.stairs.brick.iron.desc=Bloc de briques de fer utilisé pour de rapides mouvements verticaux.
+tile.stairs.brick.gold.name=Escalier en briques d'or
+tile.stairs.brick.gold.desc=Bloc de briques d'or utilisé pour de rapides mouvements verticaux.
+tile.stairs.brick.steel.name=Escalier en briques d'acier
+tile.stairs.brick.steel.desc=Bloc de briques d'acier utilisé pour de rapides mouvements verticaux.
+tile.stairs.brick.lapis.name=Escalier en briques de lapis
+tile.stairs.brick.lapis.desc=Bloc de briques de lapis utilisé pour de rapides mouvements verticaux.
 
 tile.stairs.planks.oak.painted.name=Escalier en bois mystère
 tile.stairs.planks.oak.painted.desc=Comment t'as eu ça ?!
@@ -417,6 +437,10 @@ tile.sponge.dry.name=Éponge
 tile.sponge.dry.desc=Une éponge sèche, bonne pour absorber de l'eau.
 tile.sponge.wet.name=Éponge mouillée
 tile.sponge.wet.desc=Une éponge pleine d'eau.
+tile.pumice.dry.name=Ponce
+tile.pumice.dry.desc=Une pierre volcanique poreuse et sèche, bien pour absorber de la lave.
+tile.pumice.wet.name=Ponce fondue
+tile.pumice.wet.desc=Pierre remplie de lave.
 
 tile.moss.stone.name=Roche moussue
 tile.moss.stone.desc=Mousse recouvrant un bloc de roche.
@@ -434,6 +458,8 @@ tile.gravel.desc=Une collection de galets en vrac.
 
 tile.bedrock.name=Adminium
 tile.bedrock.desc=La substance la plus résistante connue de l'homme.
+tile.boneshale.name=Schiste d'os
+tile.boneshale.desc=Une roche blanche incroyablement solide arrachée aux plus grandes profondeurs.
 
 tile.fluid.water.flowing.name=Flowing Water
 tile.fluid.water.flowing.desc=Water that flows when placed.
@@ -542,6 +568,8 @@ tile.ore.coal.limestone.name=Minerai de charbon en calcaire
 tile.ore.coal.limestone.desc=Du minerai de charbon incrusté dans du calcaire.
 tile.ore.coal.granite.name=Minerai de charbon en granite
 tile.ore.coal.granite.desc=Du minerai de charbon incrusté dans du granite.
+tile.ore.coal.permafrost.name=Minerai de charbon en pergélisol
+tile.ore.coal.permafrost.desc=Du minerai de charbon incrusté dans du pergélisol
 
 tile.ore.iron.stone.name=Minerai de fer en roche
 tile.ore.iron.stone.desc=Du minerai de fer incrusté dans de la roche.
@@ -551,6 +579,8 @@ tile.ore.iron.limestone.name=Minerai de fer en calcaire
 tile.ore.iron.limestone.desc=Du minerai de fer incrusté dans du calcaire.
 tile.ore.iron.granite.name=Minerai de fer en granite
 tile.ore.iron.granite.desc=Du minerai de fer incrusté dans du granite.
+tile.ore.iron.permafrost.name=Minerai de fer en pergélisol
+tile.ore.iron.permafrost.desc=Du minerai de fer incrusté dans du pergélisol.
 
 tile.ore.gold.stone.name=Minerai d'or en roche
 tile.ore.gold.stone.desc=Du minerai d'or incrusté dans de la roche.
@@ -560,6 +590,8 @@ tile.ore.gold.limestone.name=Minerai d'or en calcaire
 tile.ore.gold.limestone.desc=Du minerai d'or incrusté dans du calcaire.
 tile.ore.gold.granite.name=Minerai d'or en granite
 tile.ore.gold.granite.desc=Du minerai d'or incrusté dans du granite.
+tile.ore.gold.permafrost.name=Minerai d'or en pergélisol
+tile.ore.gold.permafrost.desc=Du minerai d'or incrusté dans du pergélisol.
 
 tile.ore.lapis.stone.name=Minerai de lapis lazuli en roche
 tile.ore.lapis.stone.desc=Du minerai de lapis-lazuli incrusté dans de la roche.
@@ -569,6 +601,8 @@ tile.ore.lapis.limestone.name=Minerai de lapis lazuli en calcaire
 tile.ore.lapis.limestone.desc=Du minerai de lapis-lazuli incrusté dans du calcaire.
 tile.ore.lapis.granite.name=Minerai de lapis lazuli en granite
 tile.ore.lapis.granite.desc=Du minerai de lapis-lazuli incrusté dans du granite.
+tile.ore.lapis.permafrost.name=Minerai de lapis lazuli en pergélisol
+tile.ore.lapis.permafrost.desc=Du minerai de lapis-lazuli en pergélisol.
 
 tile.ore.redstone.stone.name=Minerai de redstone en roche
 tile.ore.redstone.stone.desc=De la poussière rouge incrustée dans de la roche.
@@ -578,6 +612,8 @@ tile.ore.redstone.limestone.name=Minerai de redstone en calcaire
 tile.ore.redstone.limestone.desc=De la poussière rouge incrustée dans du calcaire.
 tile.ore.redstone.granite.name=Minerai de redstone en granite
 tile.ore.redstone.granite.desc=De la poussière rouge incrustée dans du granite.
+tile.ore.redstone.permafrost.name=Minerai de redstone en pergélisol
+tile.ore.redstone.permafrost.desc=De la poussière rouge incrustée dans du pergélisol.
 tile.ore.redstone.glowing.stone.name=Minerai de redstone en roche brillant
 tile.ore.redstone.glowing.stone.desc=De la poussière rouge incrustée dans de la roche. Émets une faible lumière.
 tile.ore.redstone.glowing.basalt.name=Minerai de redstone en basalte brillant
@@ -586,6 +622,8 @@ tile.ore.redstone.glowing.limestone.name=Minerai de redstone en calcaire brillan
 tile.ore.redstone.glowing.limestone.desc=De la poussière rouge incrustée dans du calcaire. Émets une faible lumière.
 tile.ore.redstone.glowing.granite.name=Minerai de redstone en granite brillant
 tile.ore.redstone.glowing.granite.desc=De la poussière rouge incrustée dans du granite. Émets une faible lumière.
+tile.ore.redstone.glowing.permafrost.name=Minerai de redstone en pergélisol brillant
+tile.ore.redstone.glowing.permafrost.desc=De la poussière rouge incrustée dans du pergélisol. Émets une faible lumière.
 
 tile.ore.diamond.stone.name=Minerai de diamant en roche
 tile.ore.diamond.stone.desc=Du minerai de diamant incrusté dans de la roche.
@@ -595,6 +633,8 @@ tile.ore.diamond.limestone.name=Minerai de diamant en calcaire
 tile.ore.diamond.limestone.desc=Du minerai de diamant enchâssé dans du calcaire.
 tile.ore.diamond.granite.name=Minerai de diamant en granite
 tile.ore.diamond.granite.desc=Du minerai de diamant incrusté dans du granite.
+tile.ore.diamond.permafrost.name=Minerai de diamant en pergélisol
+tile.ore.diamond.permafrost.desc=Du minerai de diamant incrusté dans du pergélisol.
 
 tile.ore.nethercoal.netherrack.name=Minerai de charbon du nether
 tile.ore.nethercoal.netherrack.desc=Du minerai de charbon du nether incrusté dans de la netherrack.
@@ -661,6 +701,10 @@ tile.piston.head.name=Piston Head
 tile.piston.head.desc=La partie poussée du piston.
 tile.piston.moving.name=Piston Mover
 tile.piston.moving.desc=La partie mobile invisible du piston.
+tile.piston.base.steel.name=Piston renforcé
+tile.piston.base.steel.desc=Pousse les blocs et les entités avec une immense force.
+tile.piston.head.steel.name=Tête de piston renforcée
+tile.piston.head.steel.desc=La partie poussée du piston d'acier.
 
 tile.noteblock.name=Bloc musical
 tile.noteblock.desc=Joue une note de musique lorsqu'il est alimenté.
@@ -677,6 +721,8 @@ tile.spikes.desc=Se désactive lorsqu'il est alimenté. Techniquement, il s'agit
 
 tile.dispenser.cobble.stone.name=Distributeur
 tile.dispenser.cobble.stone.desc=Tire des objets par le trou situé à l'avant.
+tile.activator.cobble.netherrack.name=Activateur
+tile.activator.cobble.netherrack.desc=Utilise des objets pour vous.
 
 tile.trapdoor.planks.oak.name=Trappe en bois
 tile.trapdoor.planks.oak.desc=Comme une porte, mais plate.
@@ -828,14 +874,34 @@ tile.pumpkin.carved.idle.name=Citrouille sculptée
 tile.pumpkin.carved.idle.desc=Une courge orange avec un visage effrayant.
 tile.pumpkin.carved.active.name=Citrouille lanterne
 tile.pumpkin.carved.active.desc=Une courge orange avec un visage effrayant, éclairée par une torche.
+tile.pumpkin.redstone.name=Citrouille lanterne de redstone
+tile.pumpkin.redstone.desc=Une courge orange avec un visage effrayant, éclairée par une torche de redstone.
 
+tile.cobble.netherrack.name=Pierre netherrack
+tile.cobble.netherrack.desc=Une roche rouge sombre qui brûle à jamais.
+tile.cobble.netherrack.igneous.name=Pierre netherrack igné
+tile.cobble.netherrack.igneous.desc=La chaleur extrême a fait briller cette roche de l'intérieur.
+tile.cobble.netherrack.mossy.name=Pierre netherrack mousseuse
+tile.cobble.netherrack.mossy.desc=Pierre netherrack, recouverts d'une sorte de mousse.
 tile.netherrack.name=Netherrack
 tile.netherrack.desc=Une roche rouge sombre qui brûle à jamais.
-tile.netherrack.igneous.name=Netherrack enflammé
-tile.netherrack.igneous.desc=La chaleur extrême a fait briller cette roche de l'intérieur.
+tile.brick.netherrack.name=Briques de netherrack
+tile.brick.netherrack.desc=Des briques de netherrack empilées.
+tile.slab.netherrack.carved.name=Dalle en netherrack taillée
+tile.slab.netherrack.carved.desc=Une dalle en netherrack polie.
+tile.slab.cobble.netherrack.name=Dalle en pierre netherrack
+tile.slab.cobble.netherrack.desc=Une dalle en pierre netherrack.
+tile.slab.brick.netherrack.name=Dalle en briques de netherrack
+tile.slab.brick.netherrack.desc=Une dalle en briques de netherrack.
+tile.stairs.cobble.netherrack.name=Escalier en pierre netherrack
+tile.stairs.cobble.netherrack.desc=Bloc de pierre netherrack utilisé pour de rapides mouvements verticaux.
+tile.stairs.brick.netherrack.name=Escalier en briques de netherrack
+tile.stairs.brick.netherrack.desc=Bloc de briques de netherrack utilisé pour de rapides mouvements verticaux.
 
 tile.soulsand.name=Sable des âmes
 tile.soulsand.desc=Sable brun et visqueux, difficilement praticable.
+tile.soulschist.name=Schiste des âmes
+tile.soulschist.desc=Un hideux mélange d'os anciens, fusionnés par la chaleur, la pression et le temps.
 
 tile.glowstone.name=Pierre lumineuse
 tile.glowstone.desc=Emet en permanence une forte lumière jaunâtre.
@@ -920,6 +986,76 @@ tile.lamp.active.orange.desc=Une lampe de redstone qui émet de la lumière. Tei
 tile.lamp.active.white.name=Lampe allumée blanche
 tile.lamp.active.white.desc=Une lampe de redstone qui émet de la lumière.
 
+tile.lamp.inverted.idle.name=Unlit Inverted Lamp
+tile.lamp.inverted.idle.desc=How did you get this?!
+tile.lamp.inverted.idle.black.name=Unlit Inverted Black Lamp
+tile.lamp.inverted.idle.black.desc=A redstone lamp that can emit light. Tinted black.
+tile.lamp.inverted.idle.red.name=Unlit Inverted Red Lamp
+tile.lamp.inverted.idle.red.desc=A redstone lamp that can emit light. Tinted red.
+tile.lamp.inverted.idle.green.name=Unlit Inverted Green Lamp
+tile.lamp.inverted.idle.green.desc=A redstone lamp that can emit light. Tinted green.
+tile.lamp.inverted.idle.brown.name=Unlit Inverted Brown Lamp
+tile.lamp.inverted.idle.brown.desc=A redstone lamp that can emit light. Tinted brown.
+tile.lamp.inverted.idle.blue.name=Unlit Inverted Blue Lamp
+tile.lamp.inverted.idle.blue.desc=A redstone lamp that can emit light. Tinted blue.
+tile.lamp.inverted.idle.purple.name=Unlit Inverted Purple Lamp
+tile.lamp.inverted.idle.purple.desc=A redstone lamp that can emit light. Tinted purple.
+tile.lamp.inverted.idle.cyan.name=Unlit Inverted Cyan Lamp
+tile.lamp.inverted.idle.cyan.desc=A redstone lamp that can emit light. Tinted cyan.
+tile.lamp.inverted.idle.silver.name=Unlit Inverted Light Gray Lamp
+tile.lamp.inverted.idle.silver.desc=A redstone lamp that can emit light. Tinted light gray.
+tile.lamp.inverted.idle.gray.name=Unlit Inverted Gray Lamp
+tile.lamp.inverted.idle.gray.desc=A redstone lamp that can emit light. Tinted gray.
+tile.lamp.inverted.idle.pink.name=Unlit Inverted Pink Lamp
+tile.lamp.inverted.idle.pink.desc=A redstone lamp that can emit light. Tinted pink.
+tile.lamp.inverted.idle.lime.name=Unlit Inverted Lime Lamp
+tile.lamp.inverted.idle.lime.desc=A redstone lamp that can emit light. Tinted lime.
+tile.lamp.inverted.idle.yellow.name=Unlit Inverted Yellow Lamp
+tile.lamp.inverted.idle.yellow.desc=A redstone lamp that can emit light. Tinted yellow.
+tile.lamp.inverted.idle.lightblue.name=Unlit Inverted Light Blue Lamp
+tile.lamp.inverted.idle.lightblue.desc=A redstone lamp that can emit light. Tinted light blue.
+tile.lamp.inverted.idle.magenta.name=Unlit Inverted Magenta Lamp
+tile.lamp.inverted.idle.magenta.desc=A redstone lamp that can emit light. Tinted magenta.
+tile.lamp.inverted.idle.orange.name=Unlit Inverted Orange Lamp
+tile.lamp.inverted.idle.orange.desc=A redstone lamp that can emit light. Tinted orange.
+tile.lamp.inverted.idle.white.name=Unlit Inverted White Lamp
+tile.lamp.inverted.idle.white.desc=A redstone lamp that can emit light.
+
+tile.lamp.inverted.active.name=Inverted Lamp
+tile.lamp.inverted.active.desc=How did you get this?!
+tile.lamp.inverted.active.black.name=Inverted Black Lamp
+tile.lamp.inverted.active.black.desc=A redstone lamp that emits light. Tinted black.
+tile.lamp.inverted.active.red.name=Inverted Red Lamp
+tile.lamp.inverted.active.red.desc=A redstone lamp that emits light. Tinted red.
+tile.lamp.inverted.active.green.name=Inverted Green Lamp
+tile.lamp.inverted.active.green.desc=A redstone lamp that emits light. Tinted green.
+tile.lamp.inverted.active.brown.name=Inverted Brown Lamp
+tile.lamp.inverted.active.brown.desc=A redstone lamp that emits light. Tinted brown.
+tile.lamp.inverted.active.blue.name=Inverted Blue Lamp
+tile.lamp.inverted.active.blue.desc=A redstone lamp that emits light. Tinted blue.
+tile.lamp.inverted.active.purple.name=Inverted Purple Lamp
+tile.lamp.inverted.active.purple.desc=A redstone lamp that emits light. Tinted purple.
+tile.lamp.inverted.active.cyan.name=Inverted Cyan Lamp
+tile.lamp.inverted.active.cyan.desc=A redstone lamp that emits light. Tinted cyan.
+tile.lamp.inverted.active.silver.name=Inverted Light Gray Lamp
+tile.lamp.inverted.active.silver.desc=A redstone lamp that emits light. Tinted light gray.
+tile.lamp.inverted.active.gray.name=Inverted Gray Lamp
+tile.lamp.inverted.active.gray.desc=A redstone lamp that emits light. Tinted gray.
+tile.lamp.inverted.active.pink.name=Inverted Pink Lamp
+tile.lamp.inverted.active.pink.desc=A redstone lamp that emits light. Tinted pink.
+tile.lamp.inverted.active.lime.name=Inverted Lime Lamp
+tile.lamp.inverted.active.lime.desc=A redstone lamp that emits light. Tinted lime.
+tile.lamp.inverted.active.yellow.name=Inverted Yellow Lamp
+tile.lamp.inverted.active.yellow.desc=A redstone lamp that emits light. Tinted yellow.
+tile.lamp.inverted.active.lightblue.name=Inverted Light Blue Lamp
+tile.lamp.inverted.active.lightblue.desc=A redstone lamp that emits light. Tinted light blue.
+tile.lamp.inverted.active.magenta.name=Inverted Magenta Lamp
+tile.lamp.inverted.active.magenta.desc=A redstone lamp that emits light. Tinted magenta.
+tile.lamp.inverted.active.orange.name=Inverted Orange Lamp
+tile.lamp.inverted.active.orange.desc=A redstone lamp that emits light. Tinted orange.
+tile.lamp.inverted.active.white.name=Inverted White Lamp
+tile.lamp.inverted.active.white.desc=A redstone lamp that emits light.
+
 tile.stone.polished.name=Roche polie
 tile.stone.polished.desc=Un bloc de roche polie.
 tile.granite.polished.name=Granite poli
@@ -932,6 +1068,8 @@ tile.slate.polished.name=Ardoise polie
 tile.slate.polished.desc=Un bloc d'ardoise poli.
 tile.permafrost.polished.name=Pergélisol poli
 tile.permafrost.polished.desc=Un bloc de pergélisol poli.
+tile.netherrack.polished.name=Netherrack polie
+tile.netherrack.polished.desc=Un bloc de netherrack polie.
 
 tile.candle.wax.soul.name=Bougie de cire d'âme
 tile.candle.wax.soul.desc=Une bougie brune cireuse qui brille d'une lumière non naturelle.
@@ -942,10 +1080,12 @@ tile.basket.desc=Un récipient en osier pour contenir des objets.
 tile.overlay.pebbles.name=Cailloux
 tile.overlay.pebbles.desc=Un amas de cailloux.
 
-tile.fence.chainlink.name=Barreau en maille
+tile.fence.chainlink.name=Clôture en maille
 tile.fence.chainlink.desc=Clôture constituée de maillons de chaîne interconnectés. On peut l'escalader !
-tile.fence.paper_wall.name=Mur de papier
+tile.fence.paper_wall.name=Clôture de papier
 tile.fence.paper_wall.desc=Une clôture en papier délicat. Attention !
+tile.fence.steel.name=Clôture d'acier
+tile.fence.steel.desc=Une clôture en acier robuste. Intimidant !
 
 tile.lantern.firefly.green.name=Lanterne de lucioles vertes.
 tile.lantern.firefly.green.desc=Un pot en verre qui contient un essaim de lucioles vertes.
@@ -1071,6 +1211,17 @@ tile.door.glass.top.name=Haut de la porte en verre
 tile.door.glass.top.desc=Tu ne devrai pas voir ça.
 tile.door.glass.bottom.name=Bas de la porte en verre
 tile.door.glass.bottom.desc=Et c'est pas parce que c'est transparent.
+
+tile.door.steel.top.name=Top Steel Door
+tile.door.steel.top.desc=Don't take this without asking.
+tile.door.steel.bottom.name=Bottom Steel Door
+tile.door.steel.bottom.desc=Steeler, no steeling!
+
+tile.trapdoor.steel.name=Trappe en acier
+tile.trapdoor.steel.desc=Comme une porte, mais plate et en acier durable.
+
+tile.glass.steel.name=Verre renforcé
+tile.glass.steel.desc=Comme le verre, mais sans la fragilité.
 
 tile.rope.name=Corde
 tile.rope.desc=Faite par un cordier.
